fixed tab styling issue on smaller screens

--- a/src/Kunstmaan/DashboardBundle/Resources/public/scss/_dashboard-tabs.scss
+++ b/src/Kunstmaan/DashboardBundle/Resources/public/scss/_dashboard-tabs.scss
@@ -7,7 +7,7 @@
     @include clearfix;
     margin: 40px 0 0;
     list-style: none;
-    width: 50%;
+    width: 75%;
     * {
         -moz-box-sizing: border-box;
         -webkit-box-sizing: border-box;
